# kliq-growth-engine

./: .dockerignore  .env.example  .env.production.template  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  main.py
app/ai/: bio_generator.py  blog_generator.py  client.py  pricing_analyzer.py  seo_generator.py
app/api/: analytics.py  auth.py  blogs.py  campaigns.py  dependencies.py  health.py  linkedin.py  onboarding.py  pipeline.py  prospects.py  scheduler.py  signup.py  webhooks.py
app/claim/: queries.py  renderer.py  router.py
app/cms/: content.py  media.py  models.py  products.py  store_builder.py
app/db/: models.py  session.py
app/events/: bigquery.py  slack.py
app/outreach/: brevo_client.py  calendly_processor.py  campaign_manager.py  claim_handler.py  email_builder.py  linkedin_service.py  tracking.py
dashboard/: app.py  auth_config.yaml  data.py  theme.py
docs/: LLM_CONTEXT.md  README.md  ai-pipeline.md  api-reference.md  architecture.md  claim-flow.md  cms-integration.md  config.md  dashboard.md  database.md  growth-engine-marketing-brief.md  outreach.md  preview.md  scrapers.md  workers.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
migrations/: env.py
scripts/: analyze_disputes.py  backfill_linkedin_urls.py  backfill_store_branding.py  e2e_test.py  gce-worker-compose.yml  gce-worker-setup.sh  icf_coaches.csv  import_icf_coaches.py  load_disputes_to_bq.py  seed_platform_test_data.py  setup-gcp-infrastructure.sh  test_cms_sync.py  update_to_real_creators.py
tests/: conftest.py
(+123 files in other folders)
